@@ -1,0 +1,3 @@
+LOG: PANIC DIE
+  Exim configuration error in line 27 of TESTSUITE/test-config:
+  .include specifies a non-absolute path "non/absolute"
